add RV64I Base Integer Instruction section

--- a/tex/base.tex
+++ b/tex/base.tex
@@ -113,3 +113,5 @@ ecall    & Environment Call        & I   & 1110011    & 0x0    & imm=0x0 & Trans
 ebreak   & Environment Break       & I   & 1110011    & 0x0    & imm=0x1 & Transfer control to debugger & \\ \hline
 
 \end{tabular}
+
+\input{tex/RV64I}
