fixed wrong sllX opcodes

--- a/tex/base.tex
+++ b/tex/base.tex
@@ -86,9 +86,9 @@ addi     & ADD Immediate           & I   & 0010011    & 0x0    &        & rd = r
 xori     & XOR Immediate           & I   & 0010011    & 0x4    &        & rd = rs1 \^{} imm            & \\
 ori      & OR Immediate            & I   & 0010011    & 0x6    &        & rd = rs1 | imm               & \\
 andi     & AND Immediate           & I   & 0010011    & 0x7    &        & rd = rs1 \& imm              & \\
-slli     & Shift Left Logical Imm  & I   & 0010011    & 0x5    & imm[10]=0 & rd = rs1 \verb|<<| imm[0:4]  & \\
-srli     & Shift Right Logical Imm & I   & 0010011    & 0x5    & imm[10]=0 & rd = rs1 \verb|>>| imm[0:4]  & \\
-srai     & Shift Right Arith Imm   & I   & 0010011    & 0x3    & imm[10]=1 & rd = rs1 \verb|>>| imm[0:4]  & msb-extends \\
+slli     & Shift Left Logical Imm  & I   & 0010011    & 0x1    & imm[5:11]=0x00 & rd = rs1 \verb|<<| imm[0:4]  & \\
+srli     & Shift Right Logical Imm & I   & 0010011    & 0x5    & imm[5:11]=0x00 & rd = rs1 \verb|>>| imm[0:4]  & \\
+srai     & Shift Right Arith Imm   & I   & 0010011    & 0x5    & imm[5:11]=0x20 & rd = rs1 \verb|>>| imm[0:4]  & msb-extends \\
 slti     & Set Less Than Imm       & I   & 0010011    & 0x2    &        & rd = (rs1 < imm)?1:0         & \\
 sltiu    & Set Less Than Imm (U)   & I   & 0010011    & 0x3    &        & rd = (rs1 < imm)?1:0         & zero-extends \\ \hline
 lb       & Load Byte               & I   & 0000011    & 0x0    &        & rd = M[rs1+imm][0:7]         & \\
